app/styles/components/navbar.scss
.navbar{
  align-items: end;
  box-sizing: border-box;
  display: flex;
  justify-content: space-between;
  padding: 30px;
  width: 100%;

  .logo{
    @include runaway-logotype-round--black;
  }
}

.navbar__menu-button{
  .material-icons{
      font-size: 3.5rem;
  }
}

// Landing page -specific styles
.isLanding{
  .navbar{
    position: absolute;

    .logo{
      @include runaway-logotype-round--white;
    }
  }
  .navbar.menuOpen{
    align-items: center;
    mix-blend-mode: screen;
  }

  *{
    color: $text-inverse;
  }
}

// If menu is open
.navbar.menuOpen{
  background: $brand-primary;
  display: flex;
  height: 100vh;
  justify-content: space-around;
  flex-direction: column;
  padding: 0;
  position: fixed;
  text-align: center;
  z-index: 2;

  *{
    color: $text-primary;
    margin: 0 auto;
  }

  .navbar__link, .navbar__menu-button{
    @include text-header;
    color: $text-primary;
    font-size: $size-03;

    *{
      color: $text-primary;
    }
  }

  .logo{
    @include runaway-logotype-round--black;
  }
}

